Switch bespoke executors to virtual threads
Enables spring.threads.virtual.enabled so Tomcat request threads and
Spring's default @Async executor (used by TileWriter.storeTile) run on
virtual threads. Replaces the fixed-size startup pools and
single-thread executors in PreloadService, ExportService, and
VectorPmtilesManager with Executors.newVirtualThreadPerTaskExecutor()
(or Thread.ofVirtual() for fire-and-forget startup tasks).

Blocking upstream HTTP fetches and disk writes now park virtual threads
instead of pinning platform threads, and preload/export parallelism is
no longer capped by Runtime.availableProcessors().

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>